# x86reducer

./: Cargo.toml  README.md
src/: disasm.rs  instruction.rs  linear_sweep.rs  main.rs
src/instruction/: modrm.rs  sib.rs
