[package]
name = "x86reducer"
description = "a rudimentary x86 disassembler in Rust, for JHU's REVA class"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Ortiz <rafael@ortiz.sh>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
byteorder = "1.4.3"
itertools = "0.10.3"
